--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.datasource.url=jdbc:mysql://107.180.43.16:3306
 spring.datasource.username=user305
 spring.datasource.data-password=305project
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.thymeleaf.cache=false
+#idea flags this as invalid..
+spring.thymeleaf.mode=HTML
